Style: fixed the alignment of the foodsnappers logo on popular posts and profiles

--- a/src/styles/PopularPosts.module.css
+++ b/src/styles/PopularPosts.module.css
@@ -7,3 +7,7 @@
 .TitleBold {
     font-weight: 900
 }
+
+.FoodSnappers {
+    margin-top: -4px;
+}
