--- a/src/styles/PopularProfiles.module.css
+++ b/src/styles/PopularProfiles.module.css
@@ -8,3 +8,7 @@
     font-weight: 900
 }
 
+.FoodSnappers {
+    margin-top: -4px;
+}
+
